--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 <div class="container-fluid" ng-controller="testCtrl">
     <div class="row">
         <div class="col-xs-12" ng-class="{'smaller': timedOut}">
-            <mapbox map-id="jonfor.cifpucu09j2jos4m7h7dts4ek">
+            <!--https://stackoverflow.com/questions/33223891/mapbox-resizing/33376614#33376614-->
+            <mapbox map-id="jonfor.cifpucu09j2jos4m7h7dts4ek" width="dummyValue">
             </mapbox>
         </div>
     </div>
